[package]
name = "rs-fw"
version = "0.1.0"
authors = ["Darx Kies <darxkies@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
serde_repr = "0.1"
log = "0.4"
env_logger = "0.7"
chrono = "0.4"
reqwest = { version = "0.10", features = [ "json", "blocking" ] }
actix-rt = "1"
actix-web = "2"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
